--- a/main.html
+++ b/main.html
@@ -10,12 +10,13 @@
 	<!-- the entire body must be written by student -->
 <nav>
 	<ul>
-		<a href="https://www.youtube.com/">Home</a>
-		<a href="https://course.acciojob.com/web-idle?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">About us</a>
-	<a href="https://course.acciojob.com/web-idle?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">Contact us</a>
+		
+	<li><a href="https://www.youtube.com/">Home</a></li>
+	<li>	<a href="https://course.acciojob.com/web-idle?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">About us</a></li>
+	<li><a href="https://course.acciojob.com/web-idle?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">Contact us</a></li>
 	</ul>
 </nav>
-	<header>3 random video</header>
+	<header>3 random videos</header>
 	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls="video"></video>
 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls="video1"></video>
 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls="video 3"></video>
