--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 	</ul>
 </nav>
 	<header>3 random videos</header>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls="video"></video>
-<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls="video1"></video>
-<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls="video 3"></video>
+	<video controls="video" ><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="mp4"></video>
+<video controls="video"> <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="mp4" ></video>
+<video controls="video"><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="mp4"></video>
 
 
 
